fixed spacing on rim width pages

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -727,7 +727,6 @@ nav {
   font-weight: 400;
   text-align: center;
   line-height: 2rem;
-  letter-spacing: $lato-spacing;
 }
 
 input[type="range"] range-thumb {
@@ -1065,6 +1064,29 @@ input[type="range"]:focus::-webkit-slider-runnable-track {
 {
   font-family: 'Saira Extra Condensed', sans-serif;
   font-size: $saira-small;
+
+}
+
+.slider-wheel-box {
+  width: 33vw;
+  margin-bottom: 4rem;
+  border-radius: 5px;
+  background: #e0e0e0;
+  padding: 33px;
+  margin: 0 auto;
+  -webkit-box-shadow: 0px 53px 27px -43px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 53px 27px -43px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 53px 27px -43px rgba(0, 0, 0, 0.75);
+}
+
+.slider-wheel-box h3
+{
+  display: block;
+  font-family: "Lato", sans-serif;
+  font-size: $lato-h4;
+  font-weight: 400;
+  text-align: center;
+  line-height: 2.75rem;
 
 }
 
@@ -1507,6 +1529,17 @@ footer span {
     text-align: center;
     line-height: 2.75rem;
     margin-bottom: 4rem;
+  }
+
+  .slider-wheel-box h3
+  {
+    display: block;
+    font-family: "Lato", sans-serif;
+    font-size: $lato-h4;
+    font-weight: 400;
+    text-align: center;
+    line-height: 2.75rem;
+
   }
 
   .pressure-card-summary-container
